Scratchpad: Fix issues with widget block centre alignment.

--- a/scratchpad/editor-blocks.css
+++ b/scratchpad/editor-blocks.css
@@ -885,13 +885,14 @@
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-[data-align="center"] .wp-block-archives ul,
-[data-align="center"] .wp-block-categories ul,
-[data-align="center"] .wp-block-latest-posts ul {
+/* General Widget styles */
+
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
 	list-style-position: inside;
 	text-align: center;
 }
-
 
 /* Categories */
 
